--- a/index.html
+++ b/index.html
@@ -33,19 +33,24 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown-7">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"><button type="button" class="btn btn-outline-danger btn-pill">Home</button></a> <!---->
+          <a class="nav-link" href="index.html"><button type="button"
+              class="btn btn-outline-danger btn-pill">Home</button></a>
+          <!---->
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html"><button type="button" class="btn btn-outline-danger btn-pill">About Us</button></a>
+          <a class="nav-link" href="about.html"><button type="button" class="btn btn-outline-danger btn-pill">About
+              Us</button></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="gallery.html"><button type="button" class="btn btn-outline-danger btn-pill">Gallery</button></a>
+          <a class="nav-link" href="gallery.html"><button type="button"
+              class="btn btn-outline-danger btn-pill">Gallery</button></a>
         </li>
         <!--<li class="nav-item">
           <a class="nav-link" href="product.html"><button type="button" class="btn btn-outline-danger btn-pill">Our Products</button></a>
         </li>-->
         <li class="nav-item">
-          <a class="nav-link" href="contact.html"><button type="button" class="btn btn-outline-danger btn-pill">Contact Us</button></a>
+          <a class="nav-link" href="contact.html"><button type="button" class="btn btn-outline-danger btn-pill">Contact
+              Us</button></a>
         </li>
       </ul>
       <ul class="navbar-nav">
@@ -259,15 +264,16 @@
           <p class="text-muted text-center small p-0 mb-4"><img src="images/demo/logo.png" alt="" height="60"></p>
           <p class="text-muted text-center small p-0 mb-4">All rights reserved</p>
           <div class="social d-table mx-auto">
-          <a class="facebook mx-3 h4 d-inline-block text-secondary" href="https://www.instagram.com/sreekaram_enterprises/"
-            target="_blank">
-            <img src="images/insta.png" alt="" width="18">
-          </a>
-          <a class="github mx-3 h4 d-inline-block text-secondary"
-            href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80" target="_blank">
-            <img src="images/whatsapp.png" alt="" width="18">
-          </a>
-            <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://www.facebook.com/SreeKaramEnterprises/" target="_blank">
+            <a class="facebook mx-3 h4 d-inline-block text-secondary"
+              href="https://www.instagram.com/sreekaram_enterprises/" target="_blank">
+              <img src="images/insta.png" alt="" width="18">
+            </a>
+            <a class="github mx-3 h4 d-inline-block text-secondary"
+              href="https://api.whatsapp.com/send?phone=917337554479&text=Hello%F0%9F%98%80" target="_blank">
+              <img src="images/whatsapp.png" alt="" width="18">
+            </a>
+            <a class="twitter mx-3 h4 d-inline-block text-secondary"
+              href="https://www.facebook.com/SreeKaramEnterprises/" target="_blank">
               <img src="images/facebook.png" alt="" width="18">
             </a>
             <a class="twitter mx-3 h4 d-inline-block text-secondary" href="https://twitter.com/SreekaramE?s=20"
@@ -275,8 +281,9 @@
               <img src="images/twitter.png" alt="" width="18">
             </a>
           </div>
-          <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <img src="images/quadato1.png"
-              alt="" height="50"></p>
+          <p class="text-muted text-center small p-0 mb-4">Designed and Developed by <a
+              href="https://quadato.netlify.app/"><img src="images/quadato1.png" alt="" height="50"></a></p>
+
 
         </footer>
       </div>
