removed team pictures

--- a/about.html
+++ b/about.html
@@ -245,25 +245,25 @@
                     <div class="container py-5">
                         <div class="row">
                             <div class="col-md-4 testimonial text-center">
-                                <div class="mb-3 ml-auto mr-auto">
+                              <!--  <div class="mb-3 ml-auto mr-auto">
                                     <img src="images/Proprietor.png" class="w-50" />
-                                </div>
+                                </div> -->
                                 <h5 class="mb-1">G. Balaji</h5>
                                 <span class="text d-block mb-2">Proprietor</span>
                             </div>
 
                             <div class="col-md-4 testimonial text-center">
-                                <div class="mb-3 ml-auto mr-auto">
+                              <!--  <div class="mb-3 ml-auto mr-auto">
                                     <img src="images/partner1.png" class="w-50" />
-                                </div>
+                                </div> -->
                                 <h5 class="mb-1">Manisha Ganga</h5>
                                 <span class="text d-block mb-2"> Managing Partner</span>
                             </div>
 
                             <div class="col-md-4 testimonial text-center">
-                                <div class="mb-3 ml-auto mr-auto">
+                          <!--      <div class="mb-3 ml-auto mr-auto">
                                     <img src="images/partner2.png" class="w-50" />
-                                </div>
+                                </div> -->
                                 <h5 class="mb-1">Sai Charan Ganga</h5>
                                 <span class="text d-block mb-2">Managing Partner</span>
 
